# InfluencerSphere

./: .gitignore  LICENSE  README.md
backend/: Dockerfile  pyproject.toml  uvicorn_start.sh
backend/app/: main.py  requirements.txt
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: alerts.py  influencers.py  predictions.py  search.py
backend/app/core/: config.py  logging_config.py  security.py
backend/app/ml_agents/: content_visual_agent.py  engagement_agent.py  feature_orchestrator.py  niche_profiler_agent.py  recommendation_agent.py
backend/app/services/: alert_service.py  data_ingestion_service.py  firestore_service.py  influencer_service.py  ml_prediction_service.py  scheduler.py
backend/app/utils/: data_cleaning.py  decorators.py  helpers.py  image_utils.py
data/processed/: niche_supplement_data.csv  plep_test_data.csv  ranking_data.csv
frontend/src/services/: alertApi.ts  apiClient.ts  influencerApi.ts
frontend/src/utils/: constants.ts
notebooks/: Niche Supplement Data Exploratory Analysis.ipynb  PLEP Data Exploratory Analysis.ipynb  Ranking Data Exploratory Analysis.ipynb
scripts/: generate_reports.py  populate_db.py  retrain_model.py  train_all_models.py
scripts/data/: ingest_public_data.py  preprocess_images.py  utils_data.py
utils/: formatters.ts  hooks.ts
